@@ -65,7 +65,7 @@ public class PositionalParameterConversions<T> extends ParameterConversions<T> {
 
     @Override
     public String toString() {
-        return String.format("%s(%s)", getClass().getSimpleName(), this.conversions);
+        return "%s(%s)".formatted(getClass().getSimpleName(), this.conversions);
     }
 }
 
