@@ -36,7 +36,7 @@ public class DefaultDMNBaseDecision extends DefaultFEELLib implements DMNDecisio
 
     @Override
     public Rule getRuleAnnotation(int ruleIndex) {
-        String methodName = String.format("rule%d", ruleIndex);
+        String methodName = "rule%d".formatted(ruleIndex);
         Class<? extends DefaultDMNBaseDecision> cls = this.getClass();
         Method[] declaredMethods = cls.getDeclaredMethods();
         for (Method method : declaredMethods) {
